# cortex.audio

./: CMakeLists.txt  Makefile  README.md
.github/scripts/: e2e-test-server-linux-and-mac.sh  e2e-test-server-windows.bat  e2e-test-whisper-linux-and-mac.sh
.github/workflows/: build.yml  quality-gate.yml
base/cortex-common/: enginei.h
examples/server/: server.cc
src/: audio_engine.cc  audio_engine.h  utils.h  whisper_server_context.cc  whisper_server_context.h
